@@ -1,6 +1,7 @@
 package net.hibiscus.naturespirit.world.tree_decorator;
 
 import com.mojang.serialization.Codec;
+import com.mojang.serialization.MapCodec;
 import net.hibiscus.naturespirit.blocks.OliveBranchBlock;
 import net.hibiscus.naturespirit.registration.NSBlocks;
 import net.hibiscus.naturespirit.registration.NSWorldGen;
@@ -9,14 +10,13 @@ import net.minecraft.core.Direction;
 import net.minecraft.util.RandomSource;
 import net.minecraft.world.level.levelgen.feature.treedecorators.TreeDecorator;
 import net.minecraft.world.level.levelgen.feature.treedecorators.TreeDecoratorType;
-
 import java.util.List;
 
 public class OliveBranchTreeDecorator extends TreeDecorator {
 
-  public static final Codec<OliveBranchTreeDecorator> CODEC = Codec.floatRange(0.0F, 1.0F).fieldOf("probability").xmap(OliveBranchTreeDecorator::new, (decorator) -> {
+  public static final MapCodec<OliveBranchTreeDecorator> CODEC = Codec.floatRange(0.0F, 1.0F).fieldOf("probability").xmap(OliveBranchTreeDecorator::new, (decorator) -> {
     return decorator.probability;
-  }).codec();
+  });
   private final float probability;
 
   public OliveBranchTreeDecorator(float probability) {
@@ -30,7 +30,7 @@ public class OliveBranchTreeDecorator extends TreeDecorator {
   public void place(Context generator) {
     RandomSource random = generator.random();
       List<BlockPos> list = generator.logs();
-      list.stream().filter((pos) -> pos.getY() > list.get(0).getY() + 2).forEach((pos) -> {
+      list.stream().filter((pos) -> pos.getY() > list.getFirst().getY() + 2).forEach((pos) -> {
 
         for (Direction direction : Direction.values()) {
           if (random.nextFloat() < this.probability) {
